--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "comfyui-mnemic-nodes"
 description = "Removed the extension output and renamed the full path output to make it more clear."
 version = "1.1.1"
-license = "LICENSE"
+license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch"]
 
 [project.urls]
