--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Removed the extension output and renamed the full path output to make it more clear."
-version = "1.1.1"
+description = "Updated the version number for the licence requirement"
+version = "1.1.2"
 license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch"]
 
