--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Added new groq nodes to support vision and audio. Added tooltips to everything. Renamed download image node and removed old groq LLM node."
-version = "1.2.0"
+description = "Added new models to Groq LLM. Added a new node: Tiktoken Tokenizer Info."
+version = "1.2.1"
 license = { file = "LICENSE" }
-dependencies = ["configparser", "groq", "transformers", "torch"]
+dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
 
 [project.urls]
 Repository = "https://github.com/MNeMoNiCuZ/ComfyUI-mnemic-nodes"
