--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Added new models to Groq LLM. Added a new node: Tiktoken Tokenizer Info."
-version = "1.2.1"
+description = "Added chunking functionality to tokenizer and a new string cleaning node."
+version = "1.2.2"
 license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
 
