--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Added Lora Loader - Tag node, originally by badjeff"
-version = "1.2.5"
+description = "Updated the StringClean node with the tools to strip out content between multiline tags, like <thinking>"
+version = "1.2.6"
 license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
 
