--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Added llama4 models to LLM API node"
-version = "1.2.7"
+description = "Updated LLM and VLM API node with up-to-date Groq models"
+version = "1.2.8"
 license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
 
