--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Updated LLM and VLM API node with up-to-date Groq models"
-version = "1.2.8"
+description = "Added the Resolution Image Size Selector node"
+version = "1.3.0"
 license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
 
