--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Added the Resolution Image Size Selector node"
-version = "1.3.0"
+description = "Added the Wildcard Processor, String Text Extractor and String Text Splitter nodes"
+version = "1.3.3"
 license = { file = "LICENSE" }
-dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
+dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken", "requests", "colorama"]
 
 [project.urls]
 Repository = "https://github.com/MNeMoNiCuZ/ComfyUI-mnemic-nodes"
