--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ __pycache__/
 nodes/__pycache__/
 utils/__pycache__/
 nodes/negativeprompt/weights.pt
+nodes/negativeprompt/merges.txt
 nodes/resolution_selector/user_resolution.json
 node.tar.gz
 .env
