--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Added the Wildcard Processor, String Text Extractor and String Text Splitter nodes"
-version = "1.3.4"
+description = "Added Format Date Time, Load Text-Image Pairs and Metadata Extractor nodes"
+version = "1.4.0"
 license = { file = "LICENSE" }
-dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken", "requests", "colorama"]
+dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
 
 [project.urls]
 Repository = "https://github.com/MNeMoNiCuZ/ComfyUI-mnemic-nodes"
