--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Added Format Date Time, Load Text-Image Pairs and Metadata Extractor nodes"
-version = "1.4.0"
+description = "Updated documentation & Readme"
+version = "1.4.1"
 license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
 
