--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Split the Text Image Pairs node into 2 for performance. One for single outputs and one for lists. Added count and force refresh functionality."
-version = "1.4.3"
+description = "Fixed bug with missing nodes in the __init__.py"
+version = "1.4.31"
 license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken"]
 
