Implement looping multi-select, fix whitespace handling, and simplify UI for wildcard processor node

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-mnemic-nodes"
-description = "Updated requirements"
-version = "1.6.2"
+description = "Wildcard processing improvements"
+version = "1.6.3"
 license = { file = "LICENSE" }
 dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken", "imageio", "tqdm", "piexif", "requests", "colorama", "opencv-python"]
 
